[GenAI] Test fix for org.aspectj:aspectjweaver:1.9.21.1 using gpt-5.6-sol (#10132)
* Prepare project for org.aspectj:aspectjweaver:1.9.21.1

* Partial dynamic-access coverage for org.aspectj.weaver.loadtime.ClassLoaderWeavingAdaptor (7/9)

* Dynamic-access coverage for aj.org.objectweb.asm.Constants (153/157)

* Dynamic-access coverage for org.aspectj.weaver.loadtime.DefaultWeavingContext (154/157)

* Native metadata for org.aspectj.weaver.loadtime.DefaultWeavingContext__native_batch_3

* Issue-requested metadata coverage for org.aspectj:aspectjweaver:1.9.21.1

* Update generated library support for org.aspectj:aspectjweaver:1.9.21.1

* Fixed test for org.aspectj:aspectjweaver:1.9.21.1

* Apply pre-push reviewer edits

* Record pre-push review finding for org.aspectj:aspectjweaver:1.9.21.1

* Add Forge publication descriptor

---------

Co-authored-by: Mihailo Markovic <mihailo.markovic@oracle.com>